--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     --caramel: #C47C2B;
     --dark-caramel: #8B5A1A;
     --chocolate: #3B1F0E;
-    --rose: #E8907A;
     --gold: #D4A953;
     --light-rose: #FDF0EC;
   }
@@ -134,7 +133,7 @@
   .nav-links a:hover { color:var(--caramel); }
 
   /* SECTION */
-  .section { padding:5rem 2rem;max-width:1100px;margin:0 auto; }
+  .section { padding:5rem 2rem;max-width:1200px;margin:0 auto; }
   .section-header { text-align:center;margin-bottom:3.5rem; }
   .section-tag { font-size:.7rem;letter-spacing:.3em;text-transform:uppercase;color:var(--caramel);margin-bottom:.8rem; }
   .section-title { font-family:'Playfair Display',serif;font-size:clamp(2rem,4vw,3rem);color:var(--chocolate); }
@@ -149,37 +148,46 @@
   }
   .pill.active,.pill:hover { background:var(--caramel);color:white; }
 
-  /* GRID */
+  /* ═══════════════════════════════════
+     GRID — máximo 2 columnas, más anchas
+  ═══════════════════════════════════ */
   .menu-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px,1fr));
-    gap: 2rem;
+    grid-template-columns: repeat(auto-fill, minmax(440px, 1fr));
+    gap: 2.5rem;
   }
 
-  /* CARD */
+  /* ═══════════════════════════════════
+     CARD — layout horizontal (imagen izq, info der)
+  ═══════════════════════════════════ */
   .menu-card {
     background: #fff;
-    border-radius: 16px;
+    border-radius: 20px;
     overflow: hidden;
-    box-shadow: 0 4px 20px rgba(59,31,14,.06);
+    box-shadow: 0 6px 28px rgba(59,31,14,.08);
     transition: transform .3s, box-shadow .3s;
+    display: flex;
+    flex-direction: column;
   }
   .menu-card:hover {
     transform: translateY(-6px);
-    box-shadow: 0 12px 40px rgba(59,31,14,.12);
+    box-shadow: 0 16px 48px rgba(59,31,14,.14);
   }
 
-  /* CARRUSEL */
+  /* ═══════════════════════════════════
+     CARRUSEL — altura generosa
+  ═══════════════════════════════════ */
   .carousel {
     position: relative;
-    height: 210px;
+    height: 320px;   /* ← antes 210px, ahora mucho más alto */
     overflow: hidden;
     background: #f5ede0;
+    flex-shrink: 0;
   }
   .carousel-track {
     display: flex;
     height: 100%;
-    transition: transform .4s cubic-bezier(.4,0,.2,1);
+    transition: transform .45s cubic-bezier(.4,0,.2,1);
     will-change: transform;
   }
   .carousel-slide {
@@ -197,46 +205,47 @@
     object-fit: cover;
     display: block;
   }
-  .carousel-slide.emoji-slide {
-    font-size: 5.5rem;
-  }
+  .carousel-slide.emoji-slide { font-size: 7rem; }
+
+  /* Flechas más grandes */
   .carousel-btn {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
     z-index: 10;
-    background: rgba(255,255,255,.9);
+    background: rgba(255,255,255,.92);
     border: none;
-    width: 34px;
-    height: 34px;
+    width: 42px;
+    height: 42px;
     border-radius: 50%;
     cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 18px;
+    font-size: 22px;
     font-weight: bold;
-    box-shadow: 0 2px 10px rgba(0,0,0,.15);
+    box-shadow: 0 3px 12px rgba(0,0,0,.18);
     transition: background .2s, transform .2s;
     color: var(--chocolate);
     line-height: 1;
-    padding-bottom: 1px;
   }
-  .carousel-btn:hover { background: white; transform: translateY(-50%) scale(1.12); }
-  .carousel-btn.prev { left: 8px; }
-  .carousel-btn.next { right: 8px; }
+  .carousel-btn:hover { background: white; transform: translateY(-50%) scale(1.1); }
+  .carousel-btn.prev { left: 12px; }
+  .carousel-btn.next { right: 12px; }
+
+  /* Puntos */
   .carousel-dots {
     position: absolute;
-    bottom: 10px;
+    bottom: 14px;
     left: 50%;
     transform: translateX(-50%);
     display: flex;
-    gap: 6px;
+    gap: 7px;
     z-index: 10;
   }
   .dot {
-    width: 7px;
-    height: 7px;
+    width: 8px;
+    height: 8px;
     border-radius: 50%;
     background: rgba(255,255,255,.5);
     border: none;
@@ -244,35 +253,41 @@
     padding: 0;
     transition: background .25s, transform .25s;
   }
-  .dot.on {
-    background: white;
-    transform: scale(1.35);
-  }
+  .dot.on { background: white; transform: scale(1.4); }
+
+  /* Contador */
   .carousel-counter {
     position: absolute;
-    top: 9px;
-    right: 10px;
+    top: 12px;
+    right: 14px;
     background: rgba(0,0,0,.38);
     color: white;
-    font-size: .65rem;
-    padding: 3px 9px;
+    font-size: .7rem;
+    padding: 4px 10px;
     border-radius: 100px;
     z-index: 10;
     letter-spacing: .05em;
     pointer-events: none;
   }
 
-  /* CARD BODY */
-  .card-body { padding:1.4rem 1.6rem 1.6rem; }
-  .card-tag { font-size:.65rem;letter-spacing:.2em;text-transform:uppercase;color:var(--caramel);margin-bottom:.4rem; }
-  .card-name { font-family:'Playfair Display',serif;font-size:1.4rem;color:var(--chocolate);margin-bottom:.5rem; }
-  .card-desc { font-size:.85rem;color:#7a5c3a;line-height:1.6;margin-bottom:1.2rem;font-weight:300; }
-  .card-footer { display:flex;justify-content:space-between;align-items:center; }
-  .card-price { font-family:'Playfair Display',serif;font-size:1.5rem;color:var(--caramel); }
-  .card-price span { font-family:'Lato',sans-serif;font-size:.8rem;color:#a07040;font-weight:300; }
+  /* ═══════════════════════════════════
+     CARD BODY — más espacio y tipografía mayor
+  ═══════════════════════════════════ */
+  .card-body {
+    padding: 1.8rem 2rem 2rem;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+  }
+  .card-tag { font-size:.7rem;letter-spacing:.2em;text-transform:uppercase;color:var(--caramel);margin-bottom:.5rem; }
+  .card-name { font-family:'Playfair Display',serif;font-size:1.6rem;color:var(--chocolate);margin-bottom:.6rem; }
+  .card-desc { font-size:.92rem;color:#7a5c3a;line-height:1.7;margin-bottom:1.4rem;font-weight:300;flex:1; }
+  .card-footer { display:flex;justify-content:space-between;align-items:center;margin-top:auto; }
+  .card-price { font-family:'Playfair Display',serif;font-size:1.8rem;color:var(--caramel); }
+  .card-price span { font-family:'Lato',sans-serif;font-size:.82rem;color:#a07040;font-weight:300; }
   .card-btn {
     background:var(--chocolate);color:var(--cream);border:none;
-    padding:10px 20px;border-radius:100px;font-size:.8rem;letter-spacing:.08em;
+    padding:12px 26px;border-radius:100px;font-size:.85rem;letter-spacing:.08em;
     cursor:pointer;transition:background .3s,transform .2s;
   }
   .card-btn:hover { background:var(--caramel);transform:scale(1.04); }
@@ -321,9 +336,11 @@
   @keyframes fadeUp { from{opacity:0;transform:translateY(24px)} to{opacity:1;transform:translateY(0)} }
   @keyframes bounce { 0%,100%{transform:translateY(0)} 50%{transform:translateY(6px)} }
 
-  @media(max-width:600px){
-    .nav-links{display:none;}
-    .menu-grid{grid-template-columns:1fr;}
+  /* RESPONSIVE */
+  @media(max-width:700px){
+    .nav-links { display:none; }
+    .menu-grid { grid-template-columns: 1fr; }
+    .carousel { height: 260px; }
   }
 </style>
 </head>
@@ -391,7 +408,7 @@
   ╔══════════════════════════════════════════════════════╗
   ║  CÓMO AGREGAR FOTOS A CADA PRODUCTO                  ║
   ║                                                      ║
-  ║  Pon las rutas de tus fotos dentro de fotos: [...]   ║
+  ║  Pon las rutas dentro de fotos: [...]                ║
   ║  Las fotos deben estar en la carpeta "imagenes/"     ║
   ║  dentro del mismo repositorio de GitHub.             ║
   ║                                                      ║
@@ -426,8 +443,6 @@ const productos = [
     bg: "linear-gradient(135deg,#FDE8D8,#F5C9A0)",
     cat: "postres", unidad: "pieza",
     fotos: []
-    /* ← agrega aquí las fotos del flan:
-    fotos: ["imagenes/flan1.jpg","imagenes/flan2.jpg"] */
   },
   {
     nombre: "Gelatina de Leche",
@@ -479,7 +494,7 @@ const productos = [
   },
 ];
 
-/* ── Estado de carruseles ── */
+/* ── Estado carruseles ── */
 const state = {};
 
 function buildCarousel(p, cid) {
