Improve CSS structure and implement lightbox feature
Refactor CSS comments for clarity and add lightbox functionality.

--- a/index.html
+++ b/index.html
@@ -148,18 +148,14 @@
   }
   .pill.active,.pill:hover { background:var(--caramel);color:white; }
 
-  /* ═══════════════════════════════════
-     GRID — máximo 2 columnas, más anchas
-  ═══════════════════════════════════ */
+  /* GRID */
   .menu-grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(440px, 1fr));
     gap: 2.5rem;
   }
 
-  /* ═══════════════════════════════════
-     CARD — layout horizontal (imagen izq, info der)
-  ═══════════════════════════════════ */
+  /* CARD */
   .menu-card {
     background: #fff;
     border-radius: 20px;
@@ -174,12 +170,10 @@
     box-shadow: 0 16px 48px rgba(59,31,14,.14);
   }
 
-  /* ═══════════════════════════════════
-     CARRUSEL — altura generosa
-  ═══════════════════════════════════ */
+  /* CARRUSEL */
   .carousel {
     position: relative;
-    height: 320px;   /* ← antes 210px, ahora mucho más alto */
+    height: 320px;
     overflow: hidden;
     background: #f5ede0;
     flex-shrink: 0;
@@ -204,10 +198,35 @@
     height: 100%;
     object-fit: cover;
     display: block;
+    cursor: zoom-in;          /* ← cursor de lupa */
+    transition: transform .3s;
+  }
+  .carousel-slide img:hover {
+    transform: scale(1.03);   /* ← leve zoom al pasar el mouse */
   }
   .carousel-slide.emoji-slide { font-size: 7rem; }
 
-  /* Flechas más grandes */
+  /* Hint "toca para ampliar" */
+  .zoom-hint {
+    position: absolute;
+    bottom: 48px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: rgba(0,0,0,.45);
+    color: white;
+    font-size: .65rem;
+    letter-spacing: .08em;
+    padding: 4px 12px;
+    border-radius: 100px;
+    pointer-events: none;
+    opacity: 0;
+    transition: opacity .3s;
+    white-space: nowrap;
+    z-index: 5;
+  }
+  .carousel:hover .zoom-hint { opacity: 1; }
+
+  /* Flechas */
   .carousel-btn {
     position: absolute;
     top: 50%;
@@ -270,9 +289,7 @@
     pointer-events: none;
   }
 
-  /* ═══════════════════════════════════
-     CARD BODY — más espacio y tipografía mayor
-  ═══════════════════════════════════ */
+  /* CARD BODY */
   .card-body {
     padding: 1.8rem 2rem 2rem;
     display: flex;
@@ -291,6 +308,125 @@
     cursor:pointer;transition:background .3s,transform .2s;
   }
   .card-btn:hover { background:var(--caramel);transform:scale(1.04); }
+
+  /* ═══════════════════════════════════
+     LIGHTBOX
+  ═══════════════════════════════════ */
+  .lightbox {
+    position: fixed;
+    inset: 0;
+    z-index: 9999;
+    background: rgba(0,0,0,0);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1.5rem;
+    visibility: hidden;
+    transition: background .35s;
+  }
+  .lightbox.open {
+    visibility: visible;
+    background: rgba(0,0,0,.88);
+  }
+
+  /* Imagen dentro del lightbox */
+  .lb-img-wrap {
+    position: relative;
+    max-width: min(90vw, 900px);
+    max-height: 90vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: scale(.85);
+    opacity: 0;
+    transition: transform .35s cubic-bezier(.34,1.3,.64,1), opacity .3s;
+  }
+  .lightbox.open .lb-img-wrap {
+    transform: scale(1);
+    opacity: 1;
+  }
+
+  .lb-img-wrap img {
+    max-width: 100%;
+    max-height: 85vh;
+    border-radius: 12px;
+    box-shadow: 0 24px 80px rgba(0,0,0,.6);
+    display: block;
+    object-fit: contain;
+  }
+
+  /* Nombre del producto */
+  .lb-title {
+    position: absolute;
+    bottom: -2.4rem;
+    left: 0;
+    right: 0;
+    text-align: center;
+    color: rgba(255,255,255,.75);
+    font-family: 'Playfair Display', serif;
+    font-size: 1rem;
+    font-style: italic;
+    pointer-events: none;
+  }
+
+  /* Botón cerrar */
+  .lb-close {
+    position: fixed;
+    top: 1.2rem;
+    right: 1.4rem;
+    background: rgba(255,255,255,.15);
+    border: 1.5px solid rgba(255,255,255,.25);
+    color: white;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    font-size: 1.3rem;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background .2s, transform .2s;
+    z-index: 10000;
+  }
+  .lb-close:hover { background: rgba(255,255,255,.28); transform: scale(1.1) rotate(90deg); }
+
+  /* Flechas del lightbox */
+  .lb-arrow {
+    position: fixed;
+    top: 50%;
+    transform: translateY(-50%);
+    background: rgba(255,255,255,.12);
+    border: 1.5px solid rgba(255,255,255,.2);
+    color: white;
+    width: 52px;
+    height: 52px;
+    border-radius: 50%;
+    font-size: 26px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background .2s, transform .2s;
+    z-index: 10000;
+    user-select: none;
+  }
+  .lb-arrow:hover { background: rgba(255,255,255,.25); }
+  .lb-arrow.lb-prev { left: 1.2rem; }
+  .lb-arrow.lb-next { right: 1.2rem; }
+  .lb-arrow[hidden] { display: none; }
+
+  /* Contador lightbox */
+  .lb-counter {
+    position: fixed;
+    bottom: 1.4rem;
+    left: 50%;
+    transform: translateX(-50%);
+    color: rgba(255,255,255,.6);
+    font-size: .8rem;
+    letter-spacing: .1em;
+    pointer-events: none;
+    z-index: 10000;
+  }
 
   /* BANNER */
   .banner {
@@ -328,7 +464,7 @@
     padding:1rem 1.5rem;border-radius:12px;font-size:.9rem;
     box-shadow:0 8px 24px rgba(0,0,0,.2);
     transform:translateY(100px);opacity:0;
-    transition:all .4s cubic-bezier(.34,1.56,.64,1);z-index:999;
+    transition:all .4s cubic-bezier(.34,1.56,.64,1);z-index:500;
     pointer-events: none;
   }
   .toast.show { transform:translateY(0);opacity:1; }
@@ -336,15 +472,27 @@
   @keyframes fadeUp { from{opacity:0;transform:translateY(24px)} to{opacity:1;transform:translateY(0)} }
   @keyframes bounce { 0%,100%{transform:translateY(0)} 50%{transform:translateY(6px)} }
 
-  /* RESPONSIVE */
   @media(max-width:700px){
     .nav-links { display:none; }
     .menu-grid { grid-template-columns: 1fr; }
     .carousel { height: 260px; }
+    .lb-arrow { width:42px;height:42px;font-size:20px; }
   }
 </style>
 </head>
 <body>
+
+<!-- ═══════ LIGHTBOX ═══════ -->
+<div class="lightbox" id="lightbox" onclick="lbClickOutside(event)">
+  <button class="lb-close" onclick="closeLightbox()" aria-label="Cerrar">✕</button>
+  <button class="lb-arrow lb-prev" id="lbPrev" onclick="lbMove(-1)" aria-label="Anterior">&#8249;</button>
+  <div class="lb-img-wrap">
+    <img id="lbImg" src="" alt="">
+    <div class="lb-title" id="lbTitle"></div>
+  </div>
+  <button class="lb-arrow lb-next" id="lbNext" onclick="lbMove(1)" aria-label="Siguiente">&#8250;</button>
+  <div class="lb-counter" id="lbCounter"></div>
+</div>
 
 <section class="hero" id="inicio">
   <div class="decorative-circle"></div>
@@ -410,7 +558,6 @@
   ║                                                      ║
   ║  Pon las rutas dentro de fotos: [...]                ║
   ║  Las fotos deben estar en la carpeta "imagenes/"     ║
-  ║  dentro del mismo repositorio de GitHub.             ║
   ║                                                      ║
   ║  Ejemplo:                                            ║
   ║    fotos: [                                          ║
@@ -494,7 +641,59 @@ const productos = [
   },
 ];
 
-/* ── Estado carruseles ── */
+/* ════════════════════════════════
+   LIGHTBOX
+════════════════════════════════ */
+let lbPhotos = [];
+let lbIndex  = 0;
+let lbName   = '';
+
+function openLightbox(fotos, idx, nombre) {
+  lbPhotos = fotos;
+  lbIndex  = idx;
+  lbName   = nombre;
+  updateLightbox();
+  document.getElementById('lightbox').classList.add('open');
+  document.body.style.overflow = 'hidden';
+}
+
+function closeLightbox() {
+  document.getElementById('lightbox').classList.remove('open');
+  document.body.style.overflow = '';
+}
+
+function lbClickOutside(e) {
+  if (e.target === document.getElementById('lightbox')) closeLightbox();
+}
+
+function lbMove(dir) {
+  lbIndex = ((lbIndex + dir) + lbPhotos.length) % lbPhotos.length;
+  updateLightbox();
+}
+
+function updateLightbox() {
+  document.getElementById('lbImg').src = lbPhotos[lbIndex];
+  document.getElementById('lbImg').alt = lbName + ' foto ' + (lbIndex + 1);
+  document.getElementById('lbTitle').textContent = lbName;
+
+  const total = lbPhotos.length;
+  document.getElementById('lbCounter').textContent = total > 1 ? `${lbIndex + 1} / ${total}` : '';
+  document.getElementById('lbPrev').hidden = total <= 1;
+  document.getElementById('lbNext').hidden = total <= 1;
+}
+
+// Cerrar con tecla Escape y navegar con flechas del teclado
+document.addEventListener('keydown', e => {
+  const lb = document.getElementById('lightbox');
+  if (!lb.classList.contains('open')) return;
+  if (e.key === 'Escape')      closeLightbox();
+  if (e.key === 'ArrowRight')  lbMove(1);
+  if (e.key === 'ArrowLeft')   lbMove(-1);
+});
+
+/* ════════════════════════════════
+   CARRUSEL
+════════════════════════════════ */
 const state = {};
 
 function buildCarousel(p, cid) {
@@ -505,11 +704,18 @@ function buildCarousel(p, cid) {
   let slidesHTML = '';
   if (hasPhotos) {
     p.fotos.forEach((src, i) => {
-      slidesHTML += `<div class="carousel-slide"><img src="${src}" alt="${p.nombre} foto ${i+1}" loading="lazy" onerror="this.parentElement.classList.add('emoji-slide');this.parentElement.style.background='${p.bg}';this.parentElement.innerHTML='${p.emoji}'"></div>`;
+      // Al hacer click en la imagen → abre lightbox
+      slidesHTML += `<div class="carousel-slide">
+        <img src="${src}" alt="${p.nombre} foto ${i+1}" loading="lazy"
+             onclick="openLightbox(${JSON.stringify(p.fotos)}, ${i}, '${p.nombre.replace(/'/g,"\\'")}' )"
+             onerror="this.parentElement.classList.add('emoji-slide');this.parentElement.style.background='${p.bg}';this.parentElement.innerHTML='${p.emoji}'">
+      </div>`;
     });
   } else {
     slidesHTML = `<div class="carousel-slide emoji-slide" style="background:${p.bg}">${p.emoji}</div>`;
   }
+
+  const zoomHint = hasPhotos ? `<div class="zoom-hint">🔍 Toca para ampliar</div>` : '';
 
   const arrows = count > 1 ? `
     <button class="carousel-btn prev" onclick="move('${cid}',-1)" aria-label="anterior">&#8249;</button>
@@ -518,14 +724,13 @@ function buildCarousel(p, cid) {
   const dots = count > 1
     ? `<div class="carousel-dots" id="dots-${cid}">`
       + Array.from({length:count},(_,i)=>`<button class="dot${i===0?' on':''}" onclick="goTo('${cid}',${i})" aria-label="foto ${i+1}"></button>`).join('')
-      + `</div>`
-    : '';
+      + `</div>` : '';
 
   const counter = count > 1 ? `<div class="carousel-counter" id="cnt-${cid}">1 / ${count}</div>` : '';
 
   return `<div class="carousel" id="car-${cid}">
     <div class="carousel-track" id="trk-${cid}">${slidesHTML}</div>
-    ${arrows}${dots}${counter}
+    ${zoomHint}${arrows}${dots}${counter}
   </div>`;
 }
 
@@ -547,14 +752,18 @@ function move(cid, dir) {
 function addSwipe(cid) {
   const el = document.getElementById(`car-${cid}`);
   if (!el) return;
-  let sx = 0;
-  el.addEventListener('touchstart', e => { sx = e.touches[0].clientX; }, {passive:true});
-  el.addEventListener('touchend', e => {
+  let sx = 0, moved = false;
+  el.addEventListener('touchstart', e => { sx = e.touches[0].clientX; moved = false; }, {passive:true});
+  el.addEventListener('touchmove',  e => { if (Math.abs(e.touches[0].clientX - sx) > 10) moved = true; }, {passive:true});
+  el.addEventListener('touchend',   e => {
     const d = sx - e.changedTouches[0].clientX;
     if (Math.abs(d) > 40) move(cid, d > 0 ? 1 : -1);
   });
 }
 
+/* ════════════════════════════════
+   RENDER
+════════════════════════════════ */
 let uidCounter = 0;
 function renderMenu(cat) {
   const grid = document.getElementById('menuGrid');
