--- a/index.html
+++ b/index.html
@@ -600,7 +600,9 @@ const productos = [
     precio: 50, emoji: "🍮",
     bg: "linear-gradient(135deg,#FDE8D8,#F5C9A0)",
     cat: "postres", unidad: "pieza",
-    fotos: []
+    fotos: [
+      "imagenes/receta574.jpg"
+    ]
   },
   {
     nombre: "Gelatina de Leche",
