--- a/index.html
+++ b/index.html
@@ -583,25 +583,14 @@
 
 const productos = [
   {
-    nombre: "Panetela Clásica",
-    desc: "Bizcocho esponjoso bañado en almíbar con un toque de limón. Receta de la abuela.",
-    precio: 45, emoji: "🍰",
-    bg: "linear-gradient(135deg,#FFF3DC,#FFE4A8)",
-    cat: "pasteles", unidad: "pieza",
-    fotos: [
-      "imagenes/1772067186717.jpg",
-      "imagenes/1772067192717.jpg",
-      "imagenes/1772067196812.jpg"
-    ]
-  },
-  {
     nombre: "Flan Napolitano",
     desc: "Cremoso flan con caramelo casero. Textura suave que se deshace en la boca.",
     precio: 50, emoji: "🍮",
     bg: "linear-gradient(135deg,#FDE8D8,#F5C9A0)",
     cat: "postres", unidad: "pieza",
     fotos: [
-      "imagenes/receta574.jpg"
+      "imagenes/receta574.jpg",
+      "imagenes/flan2.jpg"
     ]
   },
   {
