--- a/index.html
+++ b/index.html
@@ -583,11 +583,11 @@
 
 const productos = [
   {
-    nombre: "Flan Napolitano",
-    desc: "Cremoso flan con caramelo casero. Textura suave que se deshace en la boca.",
-    precio: 50, emoji: "🍮",
+    nombre: "Flan de leche Condensada",
+    desc: "Cremoso flan con caramelo casero. Textura suave que se deshace en la boca, hecho con leche condensada.",
+    precio: 1650, emoji: "🍮",
     bg: "linear-gradient(135deg,#FDE8D8,#F5C9A0)",
-    cat: "postres", unidad: "pieza",
+    cat: "postres", unidad: "flan entero",
     fotos: [
       "imagenes/receta574.jpg",
       "imagenes/flan2.jpg"
