--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@ const productos = [
     cat: "postres", unidad: "flan entero",
     fotos: [
       "imagenes/receta574.jpg",
-      "imagenes/flan2.jpg"
+      "imagenes/flan2.jpeg"
     ]
   },
   {
