--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dulcería La Tentación</title>
+<title>Dulcería Cielo de Azúcar</title>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
 <style>
   :root {
@@ -177,7 +177,7 @@
      picture without cropping. */
   .carousel {
     position: relative;
-    height: 260px;             /* consistent card height for all items */
+    height: 420px;             /* larger image area for better view */
     overflow: hidden;
     background: #f5ede0;
     flex-shrink: 0;
@@ -302,14 +302,14 @@
 
   /* CARD BODY */
   .card-body {
-    padding: 1.8rem 2rem 2rem;
+    padding: 0.9rem 1.3rem 1rem;
     display: flex;
     flex-direction: column;
     flex: 1;
   }
-  .card-tag { font-size:.7rem;letter-spacing:.2em;text-transform:uppercase;color:var(--caramel);margin-bottom:.5rem; }
-  .card-name { font-family:'Playfair Display',serif;font-size:1.6rem;color:var(--chocolate);margin-bottom:.6rem; }
-  .card-desc { font-size:.92rem;color:#7a5c3a;line-height:1.7;margin-bottom:1.4rem;font-weight:300;flex:1; }
+  .card-tag { font-size:.65rem;letter-spacing:.2em;text-transform:uppercase;color:var(--caramel);margin-bottom:.3rem; }
+  .card-name { font-family:'Playfair Display',serif;font-size:1.3rem;color:var(--chocolate);margin-bottom:.4rem; }
+  .card-desc { font-size:.8rem;color:#7a5c3a;line-height:1.5;margin-bottom:.7rem;font-weight:300;flex:1; }
   .card-footer { display:flex;justify-content:space-between;align-items:center;margin-top:auto; }
   .card-price { font-family:'Playfair Display',serif;font-size:1.8rem;color:var(--caramel); }
   .card-price span { font-family:'Lato',sans-serif;font-size:.82rem;color:#a07040;font-weight:300; }
@@ -486,7 +486,7 @@
   @media(max-width:700px){
     .nav-links { display:none; }
     .menu-grid { grid-template-columns: 1fr; }
-    .carousel { height: 260px; }
+    .carousel { height: 300px; }
     .lb-arrow { width:42px;height:42px;font-size:20px; }
   }
 </style>
@@ -510,14 +510,14 @@
   <div class="decorative-circle"></div>
   <div class="decorative-circle"></div>
   <div class="hero-badge">Hecho con amor · Desde 2020</div>
-  <h1>Dulcería<br><em>La Tentación</em></h1>
+  <h1>Dulcería<br><em>Cielo de Azúcar</em></h1>
   <p class="hero-subtitle">Postres artesanales que endulzan tu día 🍮</p>
   <div class="hero-divider"><span></span><i>✦</i><span></span></div>
   <div class="scroll-hint"><span>Ver menú</span><span class="arrow">↓</span></div>
 </section>
 
 <nav>
-  <div class="nav-logo">La Tentación</div>
+  <div class="nav-logo">Cielo de Azúcar</div>
   <ul class="nav-links">
     <li><a href="#inicio">Inicio</a></li>
     <li><a href="#menu">Menú</a></li>
@@ -559,7 +559,7 @@
   </div>
 </section>
 
-<footer><p>© 2025 <strong>Dulcería La Tentación</strong> · Todos los derechos reservados</p></footer>
+<footer><p>© 2025 <strong>Dulcería Cielo de Azúcar</strong> · Todos los derechos reservados</p></footer>
 <div class="toast" id="toast"></div>
 
 <script>
