--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
 <div class="banner">
   <h2>¿Pedido especial? 🎂</h2>
   <p>Hacemos pedidos personalizados para cumpleaños, fiestas y eventos. ¡Contáctanos!</p>
-  <a href="https://wa.me/5212345678901?text=Hola!%20Quiero%20hacer%20un%20pedido%20especial" class="banner-btn" target="_blank">📲 Escribir por WhatsApp</a>
+  <a href="https://wa.me/5358859467?text=Hola!%20Quiero%20hacer%20un%20pedido%20especial" class="banner-btn" target="_blank">📲 Escribir por WhatsApp</a>
 </div>
 
 <section class="contact-section" id="contacto">
@@ -553,9 +553,9 @@
     <div class="section-line"></div>
   </div>
   <div class="contact-grid">
-    <div class="contact-card"><div class="contact-icon">📍</div><h4>Dirección</h4><p>Calle Dulce #42<br>Col. Centro, Ciudad</p></div>
+    <div class="contact-card"><div class="contact-icon">📍</div><h4>Dirección</h4><p>Calle Ancha, Parque de la Amistad <br>Alamar, Habana del Este</p></div>
     <div class="contact-card"><div class="contact-icon">⏰</div><h4>Horario</h4><p>Lun–Sáb: 9am – 7pm<br>Dom: 10am – 4pm</p></div>
-    <div class="contact-card"><div class="contact-icon">📱</div><h4>WhatsApp</h4><p><a href="https://wa.me/5212345678901" target="_blank">+52 123 456 7890</a></p></div>
+    <div class="contact-card"><div class="contact-icon">📱</div><h4>WhatsApp</h4><p><a href="https://wa.me/5358859467" target="_blank">+53 58859467</a></p></div>
   </div>
 </section>
 
@@ -799,7 +799,7 @@ function filterMenu(cat, btn) {
 
 function pedirProducto(nombre, precio) {
   const msg = encodeURIComponent(`Hola! 👋 Me interesa ordenar:\n\n🍮 *${nombre}* — $${precio}\n\n¿Tienen disponibilidad?`);
-  window.open(`https://wa.me/5212345678901?text=${msg}`, '_blank');
+  window.open(`https://wa.me/5358859467?text=${msg}`, '_blank');
   showToast(`¡Redirigiendo a WhatsApp para pedir ${nombre}! 🎉`);
 }
 
