Update dessert and drink items in index.html

--- a/index.html
+++ b/index.html
@@ -594,52 +594,25 @@ const productos = [
     ]
   },
   {
-    nombre: "Gelatina de Leche",
-    desc: "Gelatina artesanal de leche condensada, fresca y perfecta para el calor.",
+    nombre: "Cake de Nata",
+    desc: "Cake de Nata, cake 3 leches o húmedos en almíbar con variedad de rellenos como: dulce de leche, crema de chocolate, ganach crema bombón o nata de vainilla.",
     precio: 35, emoji: "🟠",
     bg: "linear-gradient(135deg,#FFF0E5,#FFD9BE)",
-    cat: "postres", unidad: "pieza",
-    fotos: []
+    cat: "pasteles", unidad: "cake entero",
+    fotos: [
+      "imagenes/cake1.1.png",
+      "imagenes/cake21.png"
+    ]
   },
   {
-    nombre: "Pay de Queso",
-    desc: "Base de galleta y relleno cremoso de queso crema. Sin horno, sin igual.",
-    precio: 65, emoji: "🥧",
+    nombre: "Vasos de Tres Leches",
+    desc: "Vasos de tres leches de 8 onzas rellenos de nata y dulce de leche con bizcocho bien húmedo.",
+    precio: 360, emoji: "🥧",
     bg: "linear-gradient(135deg,#F8F0FF,#E8D5F5)",
-    cat: "pasteles", unidad: "rebanada",
-    fotos: []
-  },
-  {
-    nombre: "Arroz con Leche",
-    desc: "Receta tradicional con canela y leche entera. Porciones generosas.",
-    precio: 30, emoji: "🍚",
-    bg: "linear-gradient(135deg,#FFF9E8,#FFEFC2)",
-    cat: "postres", unidad: "porción",
-    fotos: []
-  },
-  {
-    nombre: "Agua de Jamaica",
-    desc: "Fresca infusión de flor de jamaica con el dulzor justo. Botella 1L.",
-    precio: 40, emoji: "🫙",
-    bg: "linear-gradient(135deg,#FFE5F0,#FFBDD6)",
-    cat: "bebidas", unidad: "litro",
-    fotos: []
-  },
-  {
-    nombre: "Buñuelos de Viento",
-    desc: "Crujientes y ligeros, espolvoreados con azúcar y canela. Docena.",
-    precio: 55, emoji: "🌀",
-    bg: "linear-gradient(135deg,#FFF5DC,#FFE8A0)",
-    cat: "pasteles", unidad: "docena",
-    fotos: []
-  },
-  {
-    nombre: "Atole de Guayaba",
-    desc: "Atole artesanal espeso y cremoso con guayaba natural. Jarra 1L.",
-    precio: 45, emoji: "🍵",
-    bg: "linear-gradient(135deg,#FFE8E0,#FFC9B5)",
-    cat: "bebidas", unidad: "litro",
-    fotos: []
+    cat: "pasteles", unidad: "vaso",
+    fotos: [
+      "imagenes/vasos11.png"
+    ]
   },
 ];
 
