--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@ const productos = [
   {
     nombre: "Cake de Nata",
     desc: "Cake de Nata, cake 3 leches o húmedos en almíbar con variedad de rellenos como: dulce de leche, crema de chocolate, ganach crema bombón o nata de vainilla.",
-    precio: 35, emoji: "🟠",
+    precio: 2600-3000, emoji: "🟠",
     bg: "linear-gradient(135deg,#FFF0E5,#FFD9BE)",
     cat: "pasteles", unidad: "cake entero",
     fotos: [
